[Surya]-Added: Junit and Comments and Swagger